--- a/css/half-slider.css
+++ b/css/half-slider.css
@@ -140,16 +140,17 @@ nav a:hover {
     width: calc(250px * 14);
   }
 
-  .slide-track-2 {
-    animation: scroll 30s linear infinite;
-    display: flex;
-    width: calc(250px * 14);
+  .slide-track:hover, .slide-track:focus {
+    animation-play-state: paused;
   }
 
   .slide {
     height: 85px;
     width: 200px;
     padding: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     filter: grayscale(100%);
   }
 
