--- a/css/half-slider.css
+++ b/css/half-slider.css
@@ -118,54 +118,54 @@ nav a:hover {
   overflow: hidden;
   position: relative;
   width: 100vw;
+}
 
-  &::before,
-  &::after {
-    @include white-gradient;
-    content: "";
-    height: 85px;
-    position: absolute;
-    width: 200px;
-    z-index: 2;
-  }
+.slider::before,
+.slider::after {
+  @include white-gradient;
+  content: "";
+  height: 85px;
+  position: absolute;
+  width: 200px;
+  z-index: 2;
+}
 
-  &::after {
-    right: 0;
-    top: 0;
-    transform: rotateZ(180deg);
-  }
+.slider::after {
+  right: 0;
+  top: 0;
+  transform: rotateZ(180deg);
+}
 
-  &::before {
-    left: 0;
-    top: 0;
-  }
+.slider::before {
+  left: 0;
+  top: 0;
+}
 
-  .slide-track {
-    animation: scroll 40s linear infinite;
-    display: flex;
-    width: calc(250px * 14);
-  }
+.slide-track {
+  animation: scroll 40s linear infinite;
+  display: flex;
+  width: calc(250px * 14);
+}
 
-  .slide-track:hover,
-  .slide-track:focus {
-    animation-play-state: paused;
-  }
+.slide-track:hover,
+.slide-track:focus {
+  animation-play-state: paused;
+}
 
-  .slide {
-    height: 85px;
-    width: 200px;
-    padding: 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    filter: grayscale(100%);
-  }
+.slide {
+  height: 85px;
+  width: 200px;
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  filter: grayscale(100%);
+}
 
-  .slide:hover {
-    cursor: pointer;
-    transform: scale(1.1);
-    filter: none;
-  }
+.slide:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+  filter: none;
 }
 
 .job-search-input {
@@ -375,14 +375,15 @@ select {
   border-radius: 0.25em;
   box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.2);
   cursor: pointer;
-  /* Remove IE arrow */
-  &::-ms-expand {
-    display: none;
-  }
-  /* Remove focus outline */
-  &:focus {
-    outline: none;
-  }
+}
+
+/* Remove IE arrow */
+select::-ms-expand {
+  display: none;
+}
+/* Remove focus outline */
+select:focus {
+  outline: none;
 }
 
 /* <option> colors */
