--- a/css/half-slider.css
+++ b/css/half-slider.css
@@ -823,3 +823,19 @@ option {
 .nav {
   margin-top: 5px;
 }
+
+#top {
+  padding-top: 65px;
+}
+
+.alignCenter {
+  text-align: center;
+}
+
+.alignRight {
+  text-align: right;
+}
+
+.alignLeft {
+  text-align: left;
+}
