No Result bugs, remote friendly company in same company page

--- a/css/half-slider.css
+++ b/css/half-slider.css
@@ -894,6 +894,10 @@ caption {
   }
 }
 
-.company-body{
+.company-body {
   background-color: var(--company-page-bg-color);
+}
+
+.job-listings h5 {
+  margin-top: 30px;
 }
