--- a/css/half-slider.css
+++ b/css/half-slider.css
@@ -13,8 +13,8 @@
   );
   --sidebar-background: linear-gradient(
     to right bottom,
-    hsl(234, 90%, 92%),
-    hsl(195, 100%, 88%)
+    hsl(236, 50%, 50%),
+    hsl(195, 50%, 70%)
   );
   --company-page-bg-color: white;
   --accent-color: #fff;
@@ -977,17 +977,17 @@ caption {
 }
 
 /*  */
-.backdrop-container{
+.backdrop-container {
   display: none;
   position: fixed;
-  z-index: 1040; 
+  z-index: 1040;
   left: 0;
   top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.4);  
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
   -webkit-animation: fadeIn 1.2s ease-in-out;
   animation: fadeIn 1.2s ease-in-out;
 }
@@ -1013,8 +1013,12 @@ caption {
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: rgb(56, 0, 152)
 }
 
+.sidenav-container a {
+  color: white;
+}
 
 .sidenav-container .closebtn {
   font-size: 3rem;
