--- a/css/half-slider.css
+++ b/css/half-slider.css
@@ -1013,7 +1013,7 @@ caption {
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: rgb(56, 0, 152)
+  color: rgb(56, 0, 152);
 }
 
 .sidenav-container a {
@@ -1048,4 +1048,88 @@ caption {
 .sidenav-container::-webkit-scrollbar-thumb {
   background-color: #74b9ff;
   border-radius: 10px;
+}
+
+.company-links-container-hide {
+  display: none;
+}
+
+.company-links-container {
+  margin: 15px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+
+  .chip {
+    display: inline-flex;
+    flex-direction: row;
+    background-color: #e5e5e5;
+    border: none;
+    cursor: default;
+    height: 36px;
+    outline: none;
+    padding: 0;
+    font-size: 14px;
+    font-color: #333333;
+    font-family: "Open Sans", sans-serif;
+    white-space: nowrap;
+    align-items: center;
+    border-radius: 16px;
+    vertical-align: middle;
+    text-decoration: none;
+    justify-content: center;
+    margin-left: 12px;
+    margin-top: 10px;
+  }
+
+  .chip:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+    text-decoration: underline;
+  }
+
+  .chip-head {
+    display: flex;
+    position: relative;
+    overflow: hidden;
+    background-color: #ffffff;
+    font-size: 1.25rem;
+    flex-shrink: 0;
+    align-items: center;
+    user-select: none;
+    border-radius: 10%;
+    justify-content: center;
+    width: 36px;
+    color: #fff;
+    height: 36px;
+    font-size: 20px;
+    margin-right: -4px;
+  }
+  .chip-content {
+    cursor: inherit;
+    display: flex;
+    align-items: center;
+    user-select: none;
+    white-space: nowrap;
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+
+  .chip-svg {
+    color: #999999;
+    cursor: pointer;
+    height: auto;
+    margin: 4px 4px 0 -8px;
+    fill: currentColor;
+    width: 1em;
+    height: 1em;
+    display: inline-block;
+    font-size: 24px;
+    transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    user-select: none;
+    flex-shrink: 0;
+  }
+  .chip-svg:hover {
+    color: #666666;
+  }
 }
